did code analysis